experience bar position fix & changed scrollbar style

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -159,13 +159,40 @@ body {
   image-rendering: crisp-edges;
 }
 
-
-
 @layer base {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
+}
+
+/* Scrollbar */
+html {
+  scrollbar-width: thin;
+  /* Firefox */
+  scrollbar-color: #3b3b3b #222222;
+  /* Firefox (thumb and track color) */
+}
+
+/* Webkit-based browsers (Chrome, Safari, Edge) */
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px
+}
+
+::-webkit-scrollbar-track {
+  background-color: #222222;
+  border-radius: 10px
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #3b3b3b;
+  border-radius: 10px
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #3b3b3bb2
 }
